<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:id="@+id/detail_parent_layout"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/detail_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/mainGray"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/margin_tiny"
                android:paddingTop="@dimen/name_text_margin_top"
                android:text="@string/ExampleText"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textsize_name_text" />

            <TextView
                android:id="@+id/detail_gender_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/margin_large"
                android:text="@string/ExampleText"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/textsize_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_allegiances_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_allegiances_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/Allegiances"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_medium" />

            <TextView
                android:id="@+id/detail_allegiances_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/ExampleTextLong"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_alias_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_alias_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/Aliases"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_medium" />

            <TextView
                android:id="@+id/detail_alias_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/ExampleTextLong"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_born_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_born_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/Born"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_medium" />

            <TextView
                android:id="@+id/detail_born_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/ExampleTextLong"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_died_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_died_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/Died"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_medium" />

            <TextView
                android:id="@+id/detail_died_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/ExampleTextLong"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_titles_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_titles_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/Titles"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_medium" />

            <TextView
                android:id="@+id/detail_titles_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/ExampleTextLong"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_father_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_father_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/Father"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_medium" />

            <TextView
                android:id="@+id/detail_father_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/ExampleTextLong"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_mother_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_mother_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/Mother"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_medium" />

            <TextView
                android:id="@+id/detail_mother_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/ExampleTextLong"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_spouse_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_spouse_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/Spouse"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_medium" />

            <TextView
                android:id="@+id/detail_spouse_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/ExampleTextLong"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_culture_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_culture_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/Culture"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_medium" />

            <TextView
                android:id="@+id/detail_culture_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/ExampleTextLong"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_books_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_books_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/Books"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_medium" />

            <TextView
                android:id="@+id/detail_books_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/ExampleTextLong"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_seasons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_seasons_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/TVSeasons"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_medium" />

            <TextView
                android:id="@+id/detail_seasons_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/ExampleTextLong"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/detail_played_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_played_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/margin_small"
                android:text="@string/PlayedBy"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_medium" />

            <TextView
                android:id="@+id/detail_played_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:text="@string/ExampleTextLong"
                android:textColor="@color/mainGray"
                android:textSize="@dimen/textsize_small" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>