<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/action_search_txt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_toLeftOf="@+id/btn_action_search_cancel"
        android:layout_toStartOf="@+id/btn_action_search_cancel"
        android:background="#FFFFFF"
        android:maxLines="1"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark" />

    <ImageView
        android:id="@+id/btn_action_search_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:foreground="?attr/selectableItemBackground"
        android:padding="@dimen/margin_tiny"
        android:src="@drawable/cancel" />

</RelativeLayout>