<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/bar_browse_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/app_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:textColor="@color/mainGray" />

    <ImageView
        android:id="@+id/btn_action_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingRight="4dp"
        android:src="@drawable/search" />

    <ImageView
        android:id="@+id/btn_action_reload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/btn_action_search"
        android:layout_toStartOf="@id/btn_action_search"
        android:foreground="?attr/selectableItemBackground"
        android:src="@drawable/sync" />





</RelativeLayout>


