<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainGray"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/main_progress"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/progress_bar_height"
        android:layout_marginTop="@dimen/icon_length"
        android:indeterminate="false" />

    <TextView
        android:id="@+id/main_loading_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/LoadingCharacters"
        android:textAlignment="center"
        android:textSize="@dimen/textsize_large"/>

    <ImageView
        android:id="@+id/main_list_banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_zero"
        android:layout_weight="4"
        android:scaleType="centerCrop"
        android:src="@drawable/banner"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/main_list_list"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_zero"
        android:layout_weight="20"
        android:divider="@color/colorAccent"
        android:dividerHeight="@dimen/list_divider_height"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/main_error_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/margin_medium"
        android:text="@string/StorageError"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/textsize_large"
        android:visibility="gone"
        />

</LinearLayout>